@startuml
package technologiaprogramowania {
  class Main {
    + main(args: String[]): void
    + wyswietlMenu(): void
    + wyswietlAuta(): void
  }
  class Faktura {
    - fakturaData: Date
    - sprzedawca: Sklep
    - kupujacy: Sklep
    - przedmioty: ArrayList<Produkty>
    + Faktura(fakturaData: Date, sprzedawca: Sklep, kupujacy: Sklep)
    + podajDate(): Date
    + cenaNetto(): double
    + wartoscVAT(): double
    + CenaKoncowa(): double
    + dodajProdukt(produkt: Produkty): void
    + podajProdukty(): ArrayList<Produkty>
  }
  class Sklep {
    - nazwa: String
    - adres: String
    - nip: String
    + Sklep(nazwa: String, adres: String, nip: String)
    + podajDane(): String
    + podajAdres(): String
    + podajNIP(): String
  }
  class Produkty {
    - produkt: String
    - ilosc: int
    - cena: double
    + Produkty(produkt: String, ilosc: int, cena: double)
    + podajCenaNetto(): double
    + podajWartoscVAT(): double
    + toString(): String
  }

  Main --> Sklep: Utworzenie sprzedawcy
  Main --> Sklep: Utworzenie kupującego
  Main --> Faktura: Utworzenie faktury
  Faktura --> Produkty: Dodawanie produktów
  Faktura --> Sklep: Podawanie danych
}
@enduml
